--- a/app/src/pages/Skills.css
+++ b/app/src/pages/Skills.css
@@ -3,8 +3,10 @@
     position: relative;
     background-color: #FFFBF5;
     width: 100%;
-    height: 100%;
-    padding-top: 80px;
+    min-height: 100vh; /* Ensure the container takes at least the full height of the viewport */
+    display: flex;
+    flex-direction: column;
+    padding-top: 60px;
     padding-bottom: 60px;
 }
 
