--- a/app/src/pages/Missions.css
+++ b/app/src/pages/Missions.css
@@ -1,22 +1,25 @@
 /* Missions.css */
 
 .mission-container {
-    position: relative;
-    background-color: #FFFBF5;
-    width: 100%;
-    height: 100%;
-    padding-top: 80px;
-    padding-bottom: 60px;
-  }
+  position: relative;
+  background-color: #FFFBF5;
+  width: 100%;  
+  min-height: 100vh; /* Ensure the container takes at least the full height of the viewport */
+  display: flex;
+  flex-direction: column;
+  padding-top: 60px; 
+  padding-bottom: 60px;
+}
   
   .mission-title {
     margin-bottom: 20px;
   }
   
   .mission-card {
-    background-color: #f8f9fa;
+    background-color: white;
     border-radius: 10px;
     padding: 15px;
     margin-bottom: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
   
