--- a/app/src/pages/Missions.css
+++ b/app/src/pages/Missions.css
@@ -13,13 +13,14 @@
   
   .mission-title {
     margin-bottom: 20px;
+    padding: 3%;
   }
   
   .mission-card {
     background-color: white;
     border-radius: 10px;
-    padding: 15px;
-    margin-bottom: 10px;
+    padding: 3%;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin: 2%;
   }
   
