--- a/app/src/pages/LeaderboardPage.css
+++ b/app/src/pages/LeaderboardPage.css
@@ -21,6 +21,7 @@
     margin-bottom: 20px;
     font-size: 1.5rem;
     font-weight: bold;
+    padding-left: 3%;
 }
 
 .leaderboardPage-podium {
@@ -29,7 +30,8 @@
     align-items: flex-end;
     gap: 20px;
     margin-bottom: 20px;
-    padding: 2%;
+    padding: 3%;
+    
 }
 
 .leaderboardPage-podiumFirst {
