--- a/app/src/pages/RedeemPoints.css
+++ b/app/src/pages/RedeemPoints.css
@@ -48,7 +48,7 @@
   
   .redeemPoints-productImage {
     width: 100%;
-    height: 150px;
+    height: 100%;
     object-fit: cover;
     border-radius: 10px;
   }
