--- a/app/src/pages/Skills.css
+++ b/app/src/pages/Skills.css
@@ -62,10 +62,11 @@
 
 /* Profile picture styling */
 .skills-profilePic {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 15px;
+    width: 40px;
+    height: 40px;
+    color: #555;
+    cursor: pointer;
+    padding: 3%;
 }
 
 /* Friend info container */
